# banking-system-api

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yml  dokumentasi.md
migrations/: 20251222163803_create_accounts_table.sql  20251225024926_create_idempotency_table.sql
src/: main.rs
src/adapters/api/: handler.rs
src/adapters/persistence/: entities.rs  mod.rs  postgres_repo.rs
src/domain/: mod.rs  models.rs
src/ports/: repository.rs
src/services/: transfer.rs
src/tests/: integration.rs  mod.rs  unit.rs
